Passando para java 8